--- a/CPP/configurations/stableLocal.config
+++ b/CPP/configurations/stableLocal.config
@@ -1,3 +1,6 @@
+/* -------------------- configuration -------------------- */
+// use with local encoding
+
 const int NUM_TAPES = 3; // number of tapes used by TM
 const int N = (1 << 5); // number of states
 const int T = 100; // for how many steps to emulate the TM
@@ -10,4 +13,4 @@ extern int random_pad[NUM_TAPES][PAD_LENGTH]; // the random pading
 const int log_RS_q = 8; // q: RS field size - TODO: calculate optimal
 constexpr int RS_q = 1 << log_RS_q;
 constexpr int RS_d = 32; // RS distance
-constexpr int w = 6; // local encoding vector length
+constexpr int LOCAL_ENC_k = 22; // input size for every TM emulation when using local encoding, k+1 should divide l
