Cleanup from master

--- a/CPP/configurations/stableRS_1k_to_2k.config
+++ b/CPP/configurations/stableRS_1k_to_2k.config
@@ -11,7 +11,7 @@ const int INP_LENGTH = 15; // Input length taken for each tape
 extern int TM[N][1 << NUM_TAPES]; // the TM itself
 extern int random_pad[NUM_TAPES][PAD_LENGTH]; // the random pading
 
-const int log_RS_q = 7; // q: RS field size - TODO: calculate optimal
+const int log_RS_q = 7; // q: RS field size
 constexpr int RS_q = 1 << log_RS_q;
 constexpr int RS_d = 32; // RS distance
 constexpr int LOCAL_ENC_k = 2; // input size for every TM emulation when using local encoding, k+1 should divide l
