--- a/CPP/configurations/stableLocal.config
+++ b/CPP/configurations/stableLocal.config
@@ -1,5 +1,5 @@
 /* -------------------- configuration -------------------- */
-// use with local encoding
+// use with local encoding, for 1Mb output
 
 const int NUM_TAPES = 3; // number of tapes used by TM
 const int N = (1 << 5); // number of states
@@ -10,7 +10,7 @@ const int INP_LENGTH = 15; // Input length taken for each tape
 extern int TM[N][1 << NUM_TAPES]; // the TM itself
 extern int random_pad[NUM_TAPES][PAD_LENGTH]; // the random pading
 
-const int log_RS_q = 8; // q: RS field size - TODO: calculate optimal
+const int log_RS_q = 8; // q: RS field size
 constexpr int RS_q = 1 << log_RS_q;
 constexpr int RS_d = 32; // RS distance
 constexpr int LOCAL_ENC_k = 22; // input size for every TM emulation when using local encoding, k+1 should divide l
